--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 </div>
 
 <a href="/contactUs" style="color: red">Contact Us</a><br>
+<a href="/TermsPrivacy" style="color: red">Terms & Privacy! </a><br>
 <hr>
 <a href="/regions" style="color: red">Regions</a><br>
 <a href="/user/register" style="color: #1c87c9" th:if="${currentUser==null}">Register</a>
