--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,6 @@
 <body>
 <div th:include="fragment/header::headerFragment">
 </div>
-
 <a href="/contactUs" style="color: red">Contact Us</a><br>
 <a href="/TermsPrivacy" style="color: red">Terms & Privacy! </a><br>
 <hr>
@@ -15,7 +14,7 @@
 <a href="/user/register" style="color: #1c87c9" th:if="${currentUser==null}">Register</a>
 <hr>
 
-<a href="/hotel"style="color: #1c87c9" >Hotels</a><br>
+<a href="/item"style="color: #1c87c9" >Hotels</a><br>
 <hr>
 <a href="/tour">
    Tours</a>
