--- a/src/main/resources/templates/contactUs.html
+++ b/src/main/resources/templates/contactUs.html
@@ -11,7 +11,7 @@
 <ul>
   <li>Հայաստանի Հյուրանոցների Տեղեկատու</li>
   <li>+374 99 43-88-34</li>
-  <li>info@hotel.am</li>
+  <li>info@item.am</li>
   <li>Նալբանդյան 116/44</li>
 </ul>
 </table>
