--- a/src/main/resources/templates/hotel.html
+++ b/src/main/resources/templates/hotel.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Hotels</title>
+    <style>
+        .active{
+            color: red;
+            font-size: 20px;
+        }
+        .pagination{
+            display: flex;
+            flex-direction: row;
+        }
+    </style>
 </head>
 <body>
 <div th:include="fragment/header::headerFragment">
 </div>
-<h2>Select the hotel and call the hotel directly Get the booking confirmation directly from the hotel.</h2>
+<h2>Select the item and call the item directly Get the booking confirmation directly from the item.</h2>
 
-<form action="/hotel/search" method="get">
+<form action="/item/search" method="get">
     <select name="regionId">
         <option value="">All Regions</option>
         <option th:each="region : ${regions}"
@@ -21,7 +31,7 @@
     <!--<div th:if="${currentUser.UserType == 'ADMIN'}">
 
     </div>-->
-    <a href="/hotel/add">Create Hotel</a>
+    <a href="/item/add">Create Hotel</a>
     <tr>
         <th>id</th>
         <th>name</th>
@@ -29,14 +39,22 @@
         <th>region</th>
         <th th:if="${currentUser.UserType == 'ADMIN'}">action</th>
     </tr>
-    <tr th:each="hotel : ${hotels}">
-        <td th:text="${hotel.id}"></td>
-        <td th:text="${hotel.name}"></td>
-       <td><a th:href="@{'/hotel/' + ${hotel.id}}"> <img th:if="${hotel.getPicName()!= null}" th:src="@{/getImage(imageName=${hotel.getPicName()})}" width="400"/></a></td>
-        <td th:text="${hotel.region.name}"></td>
-        <td th:if="${currentUser.UserType == 'ADMIN'}"><a th:href="@{/hotel/remove(id=${hotel.id})}">Remove</a></td>
+    <tr th:each="item : ${items}">
+        <td th:text="${item.id}"></td>
+        <td th:text="${item.name}"></td>
+       <td><a th:href="@{'/item/' + ${item.id}}"> <img th:if="${item.getPicName()!= null}" th:src="@{/getImage(imageName=${item.getPicName()})}" width="400"/></a></td>
+        <td th:text="${item.region.name}"></td>
+        <td th:if="${currentUser.UserType == 'ADMIN'}"><a th:href="@{/hotel/remove(id=${item.id})}">Remove</a></td>
     </tr>
     <a href="/">Back</a>
+    <div class="pagination">
+        <div th:if="${items.totalPages > 0}"
+             th:each="pageNumber : ${pageNumbers}">
+            <a th:href="@{/item(size=${items.size}, page=${pageNumber})}"
+               th:text="${pageNumber}"
+               th:class="${pageNumber==items.number + 1} ? active"></a>
+        </div>
+    </div>
 </table>
 <p th:if="${message != null}" th:text="${message}"></p>
 </body>
