--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -36,17 +36,15 @@
         <th>id</th>
         <th>name</th>
         <th>image</th>
-        <th>type</th>
         <th>region</th>
-        <th th:if="${currentUser.UserType == 'ADMIN'}">action</th>
+        <th>action</th>
     </tr>
     <tr th:each="item : ${items}">
         <td th:text="${item.id}"></td>
         <td th:text="${item.name}"></td>
        <td><a th:href="@{'/item/' + ${item.id}}"> <img th:if="${item.getPicName()!= null}" th:src="@{/getImage(imageName=${item.getPicName()})}" width="400"/></a></td>
-        <td th:text="${item.type}"></td>
         <td th:text="${item.region.name}"></td>
-        <td th:if="${currentUser.UserType == 'ADMIN'}"><a th:href="@{/hotel/remove(id=${item.id})}">Remove</a></td>
+        <td><a th:href="@{/item/remove(id=${item.id})}">Remove</a></td>
     </tr>
     <a href="/">Back</a>
     <div class="pagination">
