--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,7 @@
 
 <a href="/item"style="color: #1c87c9" >Hotels</a><br>
 <hr>
-<a href="/tour">
-   Tours</a>
+<a href="/tour">Tours</a>
 <br>
 <a href="https://armenia.travel/about-armenia/history/"><span style="color: coral">Armenian History</span></a><br>
 <a href="/customLogin" style="color: coral" th:if="${currentUser==null}">Login</a>
