--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,7 +27,7 @@
         <input type="text" name="address" id="address" placeholder="address" required/>
 
         <label id="icon" for="phoneNumber"><i class="fas fa-envelope"></i></label>
-        <input type="text" name="address" id="phoneNumber" placeholder="phoneNumber" required/>
+        <input type="text" name="phoneNumber" id="phoneNumber" placeholder="phoneNumber" required/>
 
         <label id="icon" for="password"><i class="fas fa-unlock-alt"></i></label>
         <input type="password" name="password" id="password" placeholder="Password" required/>
