--- a/src/main/resources/templates/tour.html
+++ b/src/main/resources/templates/tour.html
@@ -29,20 +29,18 @@
         <td th:text="${tour.name}"></td>
         <td th:text="${tour.region.name}"></td>
         <td th:text="${tour.car.name}"></td>
-        <td th:text="${tour.item.type.name()}"></td>
+        <td th:text="${tour.item.name}"></td>
         <td th:text="${tour.price}"></td>
         <td th:text="${tour.groupSize}"></td>
         <td th:text="${tour.duration}"></td>
         <td>
-            <img th:if="${tour.picName != null}" th:src="@{/getImage(imageName=${tour.picName})}" width="400"/>
+            <a th:href="@{'/tour/' +${tour.id}}">
+            <img th:if="${tour.picName != null}" th:src="@{/getImage(imageName=${tour.picName})}" width="400"/> </a>
         </td>
         <td th:text="${tour.startDate}"></td>
-        <td>
-            <a th:href="@{'/tour/' + ${tour.id}}">More</a>
-        </td>
-        <td th:if="${currentUser.UserType == 'ADMIN'}">
-            <a th:href="@{/tour/remove(id=${tour.id})}">Remove</a>
-        </td>
+<!--        <td> <a th:href="@{'/tour/' + ${tour.id}}">More</a>-->
+<!--        </td>-->
+        <td><a th:href="@{/tour/remove(id=${tour.id})}">Remove</a> </td>
     </tr>
     <a href="/">Back</a>
 </table>
