--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hotels</title>
-       <th:block>
+    <th:block>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -34,154 +34,124 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-       </th:block>
+    </th:block>
 </head>
 <body>
 <div th:include="fragment/header::headerFragment">
 </div>
 
 
-    <!-- ====================================
-    ———	PAGE TITLE
-    ===================================== -->
-    <section class="page-title">
-        <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(assets/img/pages/page-title-bg12.jpg);">
-            <div class="container">
-                <div class="row align-items-center justify-content-center" style="height: 200px;">
-                    <div class="col-lg-6">
-                        <div class="page-title-content">
-                            <div class="">
-                                <h2 class="text-uppercase text-white font-weight-bold">Armenia Hotels</h2>
-                            </div>
-                            <p class="text-white mb-0"></p>
+<!-- ====================================
+———	PAGE TITLE
+===================================== -->
+<section class="page-title">
+    <div class="page-title-img bg-img bg-overlay-darken"
+         style="background-image: url(assets/img/pages/page-title-bg12.jpg);">
+        <div class="container">
+            <div class="row align-items-center justify-content-center" style="height: 200px;">
+                <div class="col-lg-6">
+                    <div class="page-title-content">
+                        <div class="">
+                            <h2 class="text-uppercase text-white font-weight-bold">Hotels In Armenia</h2>
                         </div>
+                        <p class="text-white mb-0"></p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
-
-    <!-- ====================================
-    ———	PACKAGES SECTION
-    <form action="/item/search" method="get">
-    <select name="regionId">
-        <option value="">All Regions</option>
-        <option th:each="region : ${regions}"
-                th:text="${region.name}" th:value="${region.id}"></option>
-    </select>
-    <input type="submit" value="Search">
+    </div>
+</section>
+<!-- ====================================
+———	PACKAGES SECTION
+<form action="/item/search" method="get">
+<select name="regionId">
+    <option value="">All Regions</option>
+    <option th:each="region : ${regions}"
+            th:text="${region.name}" th:value="${region.id}"></option>
+</select>
+<input type="submit" value="Search">
 </form>
-    ===================================== -->
-    <section class="bg-smoke py-10">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="mb-md-6">
-                        <div class="row align-items-center">
-                            <div class="col-md-6 col-lg-4">
-                                <div class="form-group mb-5 mb-md-0 bg-white">
-                                    <div class="select-default select-category-2">
-                                        <select class="select-option">
-                                            <option>SearchByRegion</option>
-                                            <option>All Hotels</option>
-                                            <option>By Region</option>
+===================================== -->
+<section class="bg-smoke py-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="mb-md-6">
+                    <div class="row align-items-center">
+                        <div class="col-md-6 col-lg-4">
+                            <div class="form-group mb-5 mb-md-0 bg-white">
+                                <div class="select-default select-category-2">
+                                    <form action="/item/search" method="get">
+                                        <select name="regionId">
+                                            <!--    <option>SearchByRegion</option>-->
+                                            <option value="">All Hotels</option>
+                                            <option th:each="region : ${regions}"
+                                                    th:text="${region.name}" th:value="${region.id}"></option>
                                         </select>
-                                    </div>
+                                        <input type="submit" value="Search">
+                                    </form>
                                 </div>
                             </div>
+                        </div>
+                        <div class="col-md-6 col-lg-8 d-none d-md-block">
+                            <div class="d-flex justify-content-md-end">
+                                <a href="/item/add" class="icon-md bg-primary rounded shadow ml-3">
+                                    <i class="fa fa-th text-white" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 mb-5" th:each="item:${items}">
+                        <div class="card card-hover">
+                            <a th:href="@{'item/'+${item.id}}" class="position-relative">
+                                <img th:if="${item.getPicName()!= null}"
+                                     th:src="@{/getImage(imageName=${item.getPicName()})}" width="300" height="250Boo"/></a>
+                            </a>
 
-                            <div class="col-md-6 col-lg-8 d-none d-md-block">
-                                <div class="d-flex justify-content-md-end">
-                                    <a href="/item/add" class="icon-md bg-primary rounded shadow ml-3">
-                                        <i class="fa fa-th text-white" aria-hidden="true"></i>
-                                    </a>
+                            <div class="card-body">
+                                <h5 th:text="${item.getName()}">
+                                    <a href="single-hotel-right-sidebar.html" class="card-title text-uppercase">Park
+                                        Hotel</a>
+                                </h5>
+
+                                <p th:text="${item.region.getName()}" class="mb-7"></p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <p class="mb-0 text-capitalize">Per night</p>
+                                        <h3 th:text="${item.getDescription()}" class="text-primary">$25</h3>
+                                    </div>
+
+                                    <div>
+                                        <a th:href="@{/item/remove(id=${item.id})}"
+                                           class="btn btn-xs btn-outline-secondary text-uppercase">Delete</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-md-6 col-lg-4 mb-5" th:each="item:${items}">
-                            <div class="card card-hover">
-                                <a th:href="@{'item/'+${item.id}}" class="position-relative">
-                                    <img th:if="${item.getPicName()!= null}" th:src="@{/getImage(imageName=${item.getPicName()})}" width="300" height="250Boo"/></a>
-                                </a>
-
-                                <div class="card-body">
-                                    <h5 th:text="${item.getName()}">
-                                        <a href="single-hotel-right-sidebar.html" class="card-title text-uppercase">Park Hotel</a>
-                                    </h5>
-
-                                    <p  th:text="${item.region.getName()}" class="mb-7"></p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div>
-                                            <p class="mb-0 text-capitalize">Per night</p>
-                                            <h3  th:text="${item.getDescription()}" class="text-primary">$25</h3>
-                                        </div>
-
-                                        <div>
-                                            <a th:href="@{/item/remove(id=${item.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Delete</a>
-                                        </div>
-                                    </div>
+                    <!-- ===========
+                      <div class="pagination">
+                    <div th:if="${items.totalPages > 0}"
+                         th:each="pageNumber : ${pageNumbers}">
+                        <a th:href="@{/item(size=${items.size}, page=${pageNumber})}"
+                           th:text="${pageNumber}"
+                           th:class="${pageNumber==items.number + 1} ? active"></a>
+                    </div>
+                </div>
+                  ============= -->
+                    <section class="pt-5 pt-md-7">
+                        <div class="container">
+                            <div class="pagination">
+                                <div th:if="${items.totalPages > 0}"
+                                     th:each="pageNumber : ${pageNumbers}">
+                                    <a th:href="@{/item(size=${items.size}, page=${pageNumber})}"
+                                       th:text="${pageNumber}"
+                                       th:class="${pageNumber==items.number + 1} ? active"></a>
                                 </div>
                             </div>
-                        </div>
-
-
-        <!-- ====================================
-      ———	PAGINATION
-          <div class="pagination">
-        <div th:if="${items.totalPages > 0}"
-             th:each="pageNumber : ${pageNumbers}">
-            <a th:href="@{/item(size=${items.size}, page=${pageNumber})}"
-               th:text="${pageNumber}"
-               th:class="${pageNumber==items.number + 1} ? active"></a>
-        </div>
-    </div>
-      ===================================== -->
-        <section class="pt-5 pt-md-7">
-            <div class="container">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination justify-content-center align-items-center">
-                        <li class="page-item">
-                            <a class="page-link" href="javascript:void(0)" tabindex="-1">
-                                <i class="fa fa-long-arrow-left d-none d-md-inline-block mr-md-1" aria-hidden="true"></i> Previous
-                            </a>
-                        </li>
-
-                        <li class="page-item">
-                            <a class="page-link active" href="javascript:void(0)">1</a>
-                        </li>
-
-                        <li class="page-item">
-                            <a class="page-link" href="javascript:void(0)">2</a>
-                        </li>
-
-                        <li class="page-item">
-                            <a class="page-link" href="javascript:void(0)">3</a>
-                        </li>
-
-                        <li class="page-item">
-                            <a class="page-link" href="javascript:void(0)">...</a>
-                        </li>
-
-                        <li class="page-item">
-                            <a class="page-link" href="javascript:void(0)">9</a>
-                        </li>
-
-                        <li class="page-item">
-                            <a class="page-link" href="javascript:void(0)">Next
-                                <i class="fa fa-long-arrow-right d-none d-md-inline-block ml-md-1" aria-hidden="true"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </section>
-
-    </section>
-
 
 
 </div><!-- element wrapper ends -->
@@ -322,26 +292,18 @@
 <script src="/assets/plugins/menuzord/js/menuzord.js"></script>
 
 
+<script src='/assets/plugins/fancybox/jquery.fancybox.min.js'></script>
 
-<script src='assets/plugins/fancybox/jquery.fancybox.min.js'></script>
-
-<script src='assets/plugins/selectric/jquery.selectric.min.js'></script>
-
+<script src='/assets/plugins/selectric/jquery.selectric.min.js'></script>
 
 
 <script src="/assets/plugins/lazyestload/lazyestload.js"></script>
 
 
-
-
-
-
-
-
 <script src="/assets/plugins/smoothscroll/SmoothScroll.js"></script>
 
 <script src="/assets/js/star.js"></script>
-<link href="assets/options/optionswitch.css" rel="stylesheet">
+<link href="/assets/options/optionswitch.css" rel="stylesheet">
 <script src="/assets/options/optionswitcher.js"></script>
 <!--
 <h2>Select the item and call the item directly Get the booking confirmation directly from the item.</h2>
