--- a/tourArmenia-web/src/main/resources/templates/addItem.html
+++ b/tourArmenia-web/src/main/resources/templates/addItem.html
@@ -6,8 +6,8 @@
     <title>Add Hotel</title>
 </head>
 <body>
-<a href="/item">back</a><br>
-<form action="/item/add" method="post" enctype="multipart/form-data">
+<a href="/admin">back</a><br>
+<form action="/admin/addItem" method="post" enctype="multipart/form-data">
     <input type="text" name="name"><br>
     <textarea name="description"></textarea>
     <select name="type">
