--- a/tourArmenia-web/src/main/resources/templates/fragment/header.html
+++ b/tourArmenia-web/src/main/resources/templates/fragment/header.html
@@ -176,11 +176,7 @@
                     <a href="javascript:void(0)">Admin</a>
                     <ul id="admin" class="dropdown drop-up">
                       <li class="">
-                        <a href="dashboard.html">Dashboard</a>
-                      </li>
-
-                      <li class="">
-                        <a href="booking.html">Booking</a>
+                        <a href="/admin">ADMIN</a>
                       </li>
 
 
