--- a/tourArmenia-web/src/main/resources/templates/index.html
+++ b/tourArmenia-web/src/main/resources/templates/index.html
@@ -187,11 +187,7 @@
                                     <a href="javascript:void(0)">Admin</a>
                                     <ul id="admin" class="dropdown drop-up">
                                         <li class="">
-                                            <a href="dashboard.html">Dashboard</a>
-                                        </li>
-
-                                        <li class="">
-                                            <a href="booking.html">Booking</a>
+                                            <a href="/admin">Admin</a>
                                         </li>
 
 
@@ -905,7 +901,6 @@
 <link href="/assets/options/optionswitch.css" rel="stylesheet">
 <script src="/assets/options/optionswitcher.js"></script>
 </body>
-
 
 </body>
 </html>
