--- a/tourArmenia-web/src/main/resources/templates/item.html
+++ b/tourArmenia-web/src/main/resources/templates/item.html
@@ -121,7 +121,7 @@
                                         </div>
 
                                         <div>
-                                            <a th:href="@{/item/remove(id=${item.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Delete</a>
+                                            <a th:href="@{/admin/removeHotel(id=${item.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Delete</a>
                                         </div>
                                     </div>
                                 </div>
