--- a/tourArmenia-web/src/main/resources/templates/region.html
+++ b/tourArmenia-web/src/main/resources/templates/region.html
@@ -18,6 +18,6 @@
     <td th:text="${region.regionalCenter}"></td>
   </tr>
 </table>
-<a href="/static">Back</a>
+<a href="/">Back</a>
 </body>
 </html>
