--- a/tourArmenia-web/src/main/resources/templates/tour.html
+++ b/tourArmenia-web/src/main/resources/templates/tour.html
@@ -40,7 +40,7 @@
         <td th:text="${tour.startDate}"></td>
 <!--        <td> <a th:href="@{'/tour/' + ${tour.id}}">More</a>-->
 <!--        </td>-->
-        <td><a th:href="@{/tour/remove(id=${tour.id})}">Remove</a> </td>
+        <td><a th:href="@{/admin/removeTour(id=${tour.id})}">Remove</a> </td>
     </tr>
     <a href="/static">Back</a>
 </table>
