--- a/tourArmenia-web/src/main/resources/templates/addTours.html
+++ b/tourArmenia-web/src/main/resources/templates/addTours.html
@@ -5,8 +5,9 @@
     <title>Add Tour</title>
 </head>
 <body>
-<a href="/tour">Back</a><br>
+<a href="/admin">Back</a><br>
 <form action="/tour/add" method="post" enctype="multipart/form-data">
+<!--<form action="/admin/addTour" method="post" enctype="multipart/form-data">-->
    Name: <input type="text" name="name" required><br>
    Car:  <select name="car.id" required>
         <option th:each="car : ${cars}"
