--- a/tourArmenia-web/src/main/resources/templates/singleTour.html
+++ b/tourArmenia-web/src/main/resources/templates/singleTour.html
@@ -17,7 +17,7 @@ Group size: <span th:text="${tour.groupSize}"></span><br>
 Price: <span th:text="${tour.price}"></span><br>
 <span>Just a friendly reminder that the price mentioned is per person, encompassing children aged 7 and above.</span>
 <br>
-<a href="/booking"></a>
+<a href="/booking">Book tour</a>
 <br>
 <h2>Add Comment</h2>
 <br>
