--- a/tourArmenia-web/src/main/resources/templates/tour.html
+++ b/tourArmenia-web/src/main/resources/templates/tour.html
@@ -17,6 +17,7 @@
 <table border="1px">
     <!--<div th:if="${currentUser.UserType == 'ADMIN'}">-->
     <a href="/tour/add"> Create Tour</a>
+    <a href="/booking/createCustomTour"> Book Custom Tour</a>
 <!--    </div>-->
     <tr>
         <th>ID</th>
