--- a/tourArmenia-web/src/main/resources/templates/booking.html
+++ b/tourArmenia-web/src/main/resources/templates/booking.html
@@ -5,7 +5,7 @@
     <title>Booking</title>
 </head>
 <body>
-<form action="/booking" method="post">
+<form action="/booking/createCustomTour" method="post">
     Venue: <select name="item.id" required>
     <option th:each="item:${items}"
             th:text="${item.name}"
@@ -17,11 +17,11 @@
             th:value="${car.id}"></option>
 
 </select>
-    Guest count: <input type="text" name="guestCount" required>
-    Start date: <input type="datetime-local" name="startDate" required>
+    Guest count: <input type="text" name="groupSize" required>
+    Start date: <input type="date" name="startDate" required>
     Notes: <input type="text" name="notes">
 
-    <input type="submit" value="book my ">
+    <input type="submit" value="Book My Adventure">
 
 
 </form>
