--- a/tourArmenia-web/src/main/resources/templates/singleTour.html
+++ b/tourArmenia-web/src/main/resources/templates/singleTour.html
@@ -17,7 +17,11 @@ Group size: <span th:text="${tour.groupSize}"></span><br>
 Price: <span th:text="${tour.price}"></span><br>
 <span>Just a friendly reminder that the price mentioned is per person, encompassing children aged 7 and above.</span>
 <br>
-<a href="/booking">Book tour</a>
+<form th:action="@{/booking}" method="post">
+    <input type="hidden" name="tourId" th:value="${tour.id}" />
+    <button type="submit">Book this tour </button> </form>
+<!--<a id="bookNowBtn" th:href="@{/booking?tourId=${tourId}}">Book this tour</a>-->
+
 <br>
 <h2>Add Comment</h2>
 <br>
@@ -37,8 +41,6 @@ Price: <span th:text="${tour.price}"></span><br>
         <span>Comment: <span th:text="${comment.commentText}"></span></span>
     </li>
 </ul>
-
-
 
 </body>
 </html>
