--- a/tourArmenia-web/src/main/resources/templates/tour.html
+++ b/tourArmenia-web/src/main/resources/templates/tour.html
@@ -7,8 +7,6 @@
 <body>
 <h1>Daily Tours</h1>
 <table border="1px">
-    <!--<div th:if="${currentUser.UserType == 'ADMIN'}">-->
-        <a href="/tour/add">Create Tour</a>
     </div>
     <tr>
         <th>ID</th>
@@ -21,8 +19,7 @@
         <th>Duration</th>
         <th>Image</th>
         <th>Start Date</th>
-        <!--   th:if="${currentUser.UserType == 'ADMIN'}"-->>
-        <th >Action</th>
+        <th>action</th>
     </tr>
     <tr th:each="tour : ${tours}">
         <td th:text="${tour.id}"></td>
@@ -40,9 +37,11 @@
         <td th:text="${tour.startDate}"></td>
 <!--        <td> <a th:href="@{'/tour/' + ${tour.id}}">More</a>-->
 <!--        </td>-->
-        <td><a th:href="@{/admin/removeTour(id=${tour.id})}">Remove</a> </td>
+        <td><a th:href="@{/admin/removeTour(id=${tour.id})}">Remove</a><br>
+            <a th:href="@{/admin/updateTour(id=${tour.id})}">Update</a>
+        </td>
     </tr>
-    <a href="/static">Back</a>
+    <a href="/">Back</a>
 </table>
 
 </body>
