--- a/tourArmenia-web/src/main/resources/templates/item.html
+++ b/tourArmenia-web/src/main/resources/templates/item.html
@@ -120,7 +120,7 @@
                                             <h3  th:text="${item.getDescription()}" class="text-primary">$25</h3>
                                         </div>
 
-                                        <div>
+                                        <div th:if="${currentUser.UserType == 'ADMIN'}">
                                             <a th:href="@{/admin/removeHotel(id=${item.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Delete</a>
                                         </div>
                                     </div>
