--- a/tourArmenia-web/src/main/resources/templates/tour.html
+++ b/tourArmenia-web/src/main/resources/templates/tour.html
@@ -30,8 +30,7 @@
         <th>Duration</th>
         <th>Image</th>
         <th>Start Date</th>
-        <!--   th:if="${currentUser.UserType == 'ADMIN'}"-->>
-        <th >Action</th>
+        <th th:if="${currentUser.UserType == 'ADMIN'}"  >Action</th>
     </tr>
     <tr th:each="tour : ${tours}">
         <td th:text="${tour.id}"></td>
@@ -47,10 +46,8 @@
                 <img th:if="${tour.picName != null}" th:src="@{/getImage(imageName=${tour.picName})}" width="400"/> </a>
         </td>
         <td th:text="${tour.startDate}"></td>
-        <td th:if="${currentUser.UserType == 'ADMIN'}"><a th:href="@{/tour/remove(id=${tour.id})}">Remove</a></td>
-<!--        <td> <a th:href="@{'/tour/' + ${tour.id}}">More</a>-->
-<!--        </td>-->
-        <td><a th:href="@{/admin/removeTour(id=${tour.id})}">Remove</a> </td>
+        <td th:if="${currentUser.UserType == 'ADMIN'}"><a th:href="@{/admin/removeTour(id=${tour.id})}">Remove</a> </td>
+
     </tr>
     <a href="/static">Back</a>
 </table>
