--- a/tourArmenia-web/src/main/resources/templates/admin.html
+++ b/tourArmenia-web/src/main/resources/templates/admin.html
@@ -7,6 +7,7 @@
 <body>
 <h1>ADMIN PAGE</h1>
 <a href="/">Back</a><br>
+<a href="/admin/addRegion">Create Region</a><br>
 <a href="/admin/addItem">Create Item</a><br>
 <a href="/admin/addTour">Create Tour</a><br>
 <a href="/admin/addCar">Create Car</a>
