--- a/tourArmenia-web/src/main/resources/templates/region.html
+++ b/tourArmenia-web/src/main/resources/templates/region.html
@@ -3,14 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Regions</title>
+  <th:block th:include="fragment/header::headerFragment"></th:block>
+
 </head>
 <body>
+<div id="language" style="color: red" >
+  <a href="?lang=hy">հայերեն</a>
+  <a href="?lang=ru">Русский</a>
+  <a href="?lang=en">English</a>
+</div>
 <h1>Regions</h1>
 <table border="1px">
   <tr>
     <th>id</th>
-    <th>name</th>
-    <th>RegionalCenter</th>
+    <th th:text="#{name}"></th>
+    <th th:text="#{region.centre}"></th>
   </tr>
   <tr th:each="region : ${regions}">
     <td th:text="${region.id}"></td>
